# rust-service-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  crates.js  search-index.js  src-files.js
config/: settings.yaml
debian/: service
main/: all.html  fn.main.html  fn.setup_tracing.html  index.html  sidebar-items.js  struct.Args.html
src/: configuration.rs  error.rs  lib.rs
src/main/: main.rs.html
src/template/: configuration.rs.html  error.rs.html  lib.rs.html
template/: all.html  fn.add.html  index.html  sidebar-items.js
template/configuration/: index.html  sidebar-items.js  struct.AppConfig.html  struct.SampleConfig.html
template/error/: enum.TemplateError.html  index.html  sidebar-items.js
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
